<resources>
    <string name="app_name">KidsLearn</string>


    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_fullscreen_image">Fullscreen image</string>
    <string name="title_activity_captured_frame">Captured frames</string>

    <string name="action_settings">Settings</string>
    <string name="action_picture">Picture</string>
    <string name="action_camera">Camera</string>

    <string name="pref_color">Color to search for</string>
    <string name="pref_quality">Quality of image to be saved</string>
    <string name="pref_type">Method for taking pictures</string>
    <string name="pref_what_save">Save picture/s</string>

    <string name="context_menu_delete">Delete</string>

    <string name="img_captured_content">Image captured from the cam</string>
    <string name="img_filtered_content">Image captured from the cam and filtered</string>
    <string name="img_item_content">Image in the gallery</string>
    <string name="img_full_content">Image visualized in fullscreen from the gallery</string>
    <string name="take_picture_content">Take picture</string>

    <string name="write_error">Writing error, image/s not saved</string>
    <string name="unexpected_error">Unexpected error, image/s not saved</string>
    <string name="not_writeable_memory_error">External memory NOT writeable, image/s not saved</string>
    <string name="not_deleted_image_error">Unexpected error, image NOT deleted</string>
    <string name="position_error">Error, passed position of the image is NOT valid</string>

    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="light_blue">Light blue</string>
    <string name="blue">Blue</string>
    <string name="magenta">Magenta</string>

    <string name="save_frame">Save the image and continue</string>
    <string name="discard_frame">Continue without saving the image</string>
    <string name="only_picture">Only picture taked</string>
    <string name="picture_and_color_mask">Picture taked + color mask</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="automatic_shoot">Automatic shoot</string>
    <string name="immediate_shoot">Immediate</string>
    <string name="shoot_modality">Shoot modality</string>
    <string name="save_modality">Save image/s modality</string>


    <string name="prediction">Prediction</string>
    <string name="probability">Probability</string>
    <string name="timecost">Timecost</string>
    <string name="timecost_value">%1$d ms</string>
    <string name="empty">--</string>
    <string name="detect">Detect</string>
    <string name="clear">Clear</string>
    <string name="please_write_a_digit">Please write a digit in the box above.</string>
    <string name="failed_to_create_classifier">Failed to create classifier.</string>

    <string name="description_info">Info</string>
    <string name="request_permission">This app needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="tflite">tflite</string>
    <string name="nnapi">NNAPI</string>
    <string name="threads">Threads:</string>

    <string name="model">Model:</string>
    <string-array name="models">
        <item>Quantized</item>
        <item>Float</item>
    </string-array>

    <string name="device">Device:</string>
    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
</resources>
