<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/img_original"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/img_captured_content"
        android:scaleType="centerInside" />

    <ImageView
        android:id="@+id/img_filtered"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:paddingBottom="10dp"
        android:layout_below="@+id/img_original"
        android:contentDescription="@string/img_filtered_content"
        android:scaleType="centerInside" />
    
    <Button
        android:id="@+id/Button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="setDiscardFrame"
        android:text="@string/discard_frame" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button2"
        android:layout_alignParentLeft="true"
        android:onClick="setSaveFrame"
        android:text="@string/save_frame" />

</RelativeLayout>